2006-09-21  Mark D. Baushke  <mdb@gnu.org>

	* commit.c (commit_fileproc): If support for the old info format
	strings is removed, then the block should always be run, not just
	when ci->status is not T_REMOVED.
	(Patch from "C. Michael Pilato" <cmpilato@collab.net>)

2006-09-15  Derek Price  <derek@ximbiot.com>

	* error.c (error): Remove errant comment.

	* server.c (pserver_authenticate_connection): Don't call error (1, ...)
	where code is expected to execute afterwards.

	Clean up repetitive server error handling code.
	* server.c (pending_msg, push_pending_error, push_pending_warning): New
	functions.
	(alloc_pending, alloc_pending_warning): Remove these functions.
	(*): Update all callers.

2006-09-14  Derek Price  <derek@ximbiot.com>

	* sanity.sh (server3, client2): New tests.

2006-09-12  Derek Price  <derek@ximbiot.com>

	* commit.c (precommit_list_to_args_proc, precommit_proc): Output tag
	for commitinfo line when requested.
	* sanity.sh (info): Add tests for this.

2006-09-07  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve comments.  Restore repaired error
	handling.

2006-09-06  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (apply_rcs_changes): Improve linked list handling.  Remove
	unused variables and unreachable error handling code.  Avoid unneeded
	dynamic allocation of temp linevector.  Minor stylistic code clean up.

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve header block comment.  Clean up
	unused linevector on non-fatal error.

2006-09-06  Mark D. Baushke  <mdb@gnu.org>

	* client.h (HAVE_NETDB_H): Explicitly include netdb.h to get
	'struct hostent' even when --disable-password-authenticated-client
	and --without-gssapi are used.
	(CVS_PROXY_PORT): Define outside of AUTH_CLIENT_SUPPORT and
	HAVE_GSSAPI.
	* buffer.h (buf_count_mem): Provide if defined (PROXY_SUPPORT).
	(Problems reported by Jim Salter <jsalterjim@earthlink.net>.)
